syntax = "proto3";
package model;
option go_package = ".;mall";

// SubjectProductRelation 专题商品关系表
message SubjectProductRelation {
  uint64 id = 1; // 主键
  uint64 subject_id = 2; // 专题ID
  uint64 product_id = 3; // 产品ID
}